tests/ui/parser/macro/macro-bad-delimiter-ident.rs
fn main() {
    foo! bar < //~ ERROR expected one of `(`, `[`, or `{`, found `bar`
}
